style: fix gap between cards

--- a/src/components/countries/countries.css
+++ b/src/components/countries/countries.css
@@ -7,12 +7,14 @@ main {
 @media (max-width: 875px) {
   main {
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
   }
 }
 
 @media (max-width: 650px) {
   main {
     grid-template-columns: 1fr 1fr;
+    gap: 24px;
   }
 }
 
